# nonebot-plugin-gemini

./: README.md  pyproject.toml
nonebot_plugin_gemini/: __init__.py  config.py  gemini.py  model.py
nonebot_plugin_gemini/search_engines/: __init__.py  models.py
nonebot_plugin_gemini/search_engines/google/: __init__.py  models.py
