[project]
name = "nonebot-plugin-gemini"
version = "0.1.0"
description = "✨ Gemini AI 对话 NoneBot 插件 ✨"
authors = [
    {name = "zhaomaoniu", email = "2667292003@qq.com"},
]
dependencies = [
    "nonebot2>=2.1.3",
    "nonebot-plugin-alconna>=0.35.1",
    "nonebot-plugin-htmlrender>=0.2.3",
    "google-generativeai>=0.3.2",
    "Pillow>=10.2.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"
